styles.css
/* ... */
.mask1 {
    width: 100%;
    height: 600px; /* Set the height for mobile view */
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero-img {
    width: auto;
    height: 100%;
    display: block;
    object-fit: cover;
    object-position: center center;
}

.empty {
    height: 90vh;
}

.menu-toggle {
    display: none;
}

.menu-icon {
    display: block;
    cursor: pointer;
    width: 30px;
    height: 21px;
}

.menu-icon .bar {
    display: block;
    width: 100%;
    height: 3px;
    margin-bottom: 5px;
    background-color: #fff;
}

.nav-menu {
    list-style: none;
    padding: 0;
    margin: 0;
    display: none;
    flex-direction: column;
    align-items: center;
}

.nav-menu li {
    margin: 1em 0;
}

.nav-menu li a {
    color: #fff;
    text-decoration: none;
    background-color: aqua;
}

button {
    width: 20vw;
    height: 10vw;
    margin-right: 0;
    background-color: bisque;
    transition: background-color 0.3s ease-in;
}

button:hover {
    background-color: darkorange; /* Color for hover effect */
}

.cart-btn {
    width: fit-content;
    max-height: 35px;
   
}

.product-img {
    margin-top: 5vw;
    height: 20em;
    width: 20em;
    height: 20em;
    border-radius: 7%;
    box-shadow: 5px 5px 10px ;
    height: 100%;
}

.product {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.product div {
    opacity: 0;
    animation: slideUp 2s forwards;
}

.product div:nth-child(1) {
    animation-delay: 0.2s;
}

.product:nth-child(2) {
    animation-delay: 0.4s;
}

.product:nth-child(3) {
    animation-delay: 0.6s;
}

.product-image {
    width: 100vw;
    display: flex;
    justify-content: center;
}

.product-desc {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-left: 3vw;
    padding-right: 3vw;
    text-align: justify;
    width: 94%;
    height: 35vh;
    justify-content: space-evenly;
}

.review-stars {
    width: 10em;
    height: fit-content;
}

.add-cart {
    display: flex;
}

.price-cart {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 10em;
}

.cart-review {
    display: flex;
    margin-bottom: 10%;
    width: 25em;
    justify-content: space-between;
    align-items: center;
    padding-left: 20px;
}

.menu-toggle:checked + .menu-icon + .nav-menu {
    display: flex;
}

footer {
    background-color: #343434;
    color: #fff;
    padding: 0.6em 0;
    text-align: center;
    bottom: 0;
    position: fixed;
    width: 100vw;
}

.nutrition-tbl {
    width: 75%;
}

.nutrition-tbl th, .nutrition-tbl td {
    border-color: #343434;
}

.tbl-box {
    display: flex;
    justify-content: center;
    margin-bottom: 25%;
}

.container-btn {
    padding-bottom: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 25px;
}

/* Media Queries for Larger Screens */
@media (min-width: 768px) {
    .menu-icon {
        display: none;
    }

    .nav-menu {
        display: flex;
        flex-direction: row;
        justify-content: flex-end;
    }

    .nav-menu li {
        margin: 0 1em;
    }
    
    button {
        width: 10vw;
        height: 5vw;
    }

    .product-desc span p{
        width: 53em;
        margin: 0;
    }

    .tbl-box {
        margin-bottom: 10%;
    }

    .main-home {
        background-image: none;
        padding: 0;
        height: 100vh;
        justify-content: flex-start;
    } 

    .hero-img {
        opacity: 1;
        width: 100%;
        height: 100%; /* Adjust for larger screens */
        object-fit: cover;
        object-position: center;
        
    }

    .mask1 {
        height: auto; /* Adjust as needed for larger screens */
    }

    .shopping_cart, .shopping_cart_container, table {
        width: 760px;
    }

}

@media (max-width:389px) {
    .cart-btn {
        width: fit-content;
    }

    .tbl-box {
        margin-top: 10%;
    }

    .checkbox-group {
        flex-direction: column; /* Stack the checkbox and label vertically */
        align-items: flex-start; /* Align items to the start */
        margin-left: -75px;
        border: .5em
    }

    input[type="checkbox"] {
        margin-bottom: 5px;
    }
}

@media (min-width:513px) {
    .cart-btn {
        width: 90px;
    }
    .nutrition-tbl {
        width: 385px;
    }


}
@media (min-width:600px) { 
    .product-desc {
        width: 90vw;
        margin-left: 2%;
    }

    .tbl-box {
        margin-bottom: 18%;
    }
}

@media (min-width:900px) {
    .hero-img {
        height: 100%;
    }

    .mask1 {
        width: 100%;
        height: 100%; /* Set the height for mobile view */
        overflow: visible;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }
}

@media (min-width:1920px) {
    .mask1 {
        height: fit-content;
    }
}

@media (min-width:1025px) { 
    .product-desc {
        margin-top: 3%;
        justify-content: space-between;
    }

    .tbl-box {
        margin-bottom: 10%;
    }
}

.card img {
     width: 100px; height: 100px;
}


.snacks {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  margin-bottom: 20px;
  width: 100vw;
  overflow-y: scroll;
}
.card{
    justify-content: space-between;
    box-shadow: 5px 5px 10px 5px ;
    padding: 10px;
    border-radius: 10px;
    background-color: bisque;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    font-weight: bold;
    color: black;
    transition: 0.5s;
    box-shadow: 5px 5px 10px 5px ;
    margin: 10px;
    padding: 10px;
    border-radius: 20px;
    position: relative;
    width: 120px;
    height: 250px;
    opacity: 0;
    animation: slideIn 2s forwards;
}

.card:nth-child(1) {
    animation-delay: 0.1s;
}
.card:nth-child(2) {
    animation-delay: 0.2s;
}
/* ... */

